--- a/src/app/AdminPanel/pages/sub-category-master/sub-category-list/sub-category-list.component.html
+++ b/src/app/AdminPanel/pages/sub-category-master/sub-category-list/sub-category-list.component.html
@@ -35,6 +35,7 @@
               <th pSortableColumn="Sub_Catg_Name_D">Sub Category Name (Danish) <p-sortIcon field="Sub_Catg_Name_D">
                 </p-sortIcon>
               </th>
+              <th pSortableColumn="DepartmentCodes">Department <p-sortIcon field="DepartmentCodes"></p-sortIcon>
               <th pSortableColumn="StatusDesc">Status <p-sortIcon field="StatusDesc"></p-sortIcon>
               </th>
               <th pSortableColumn="Deleted">IsDeleted <p-sortIcon field="Deleted"></p-sortIcon>
@@ -57,6 +58,7 @@
               <th></th>
               <th></th>
               <th></th>
+              <th></th>
 
             </tr>
           </ng-template>
@@ -73,6 +75,9 @@
               </td>
               <td>
                 {{item.Sub_Catg_Name_D}}
+              </td>
+              <td>
+                {{item.DepartmentCodes}}
               </td>
               <td>
                 {{item.StatusDesc}}
