Allowed pin functionality by RG

--- a/src/app/AdminPanel/pages/root-header-master/root-header-list/root-header-list.component.html
+++ b/src/app/AdminPanel/pages/root-header-master/root-header-list/root-header-list.component.html
@@ -73,8 +73,8 @@
               <tr>
                   <th pSortableColumn="Root_Name">Root Name<span class="warningclass" *ngIf="IsRowEdit">*</span><p-sortIcon field="Root_Name"></p-sortIcon></th>
                   <th pSortableColumn="Root_Name_D">Root Name (Danish)<span class="warningclass" *ngIf="IsRowEdit">*</span> <p-sortIcon field="Root_Name_D"></p-sortIcon></th>
-                  <th pSortableColumn="Display_Seq_No">StatDisplay Seq No<span class="warningclass" *ngIf="IsRowEdit">*</span> <p-sortIcon field="Display_Seq_No"></p-sortIcon></th>
-                  <th pSortableColumn="StatusDesc">Status <p-sortIcon field="StatusDesc"></p-sortIcon></th>
+                  <th pSortableColumn="StatusDesc">Status<span class="warningclass" *ngIf="IsRowEdit">*</span> <p-sortIcon field="Display_Seq_No"></p-sortIcon></th>
+                  <th pSortableColumn="Display_Seq_No">Display Seq No <p-sortIcon field="Display_Seq_No"></p-sortIcon></th>
                   <th pSortableColumn="Deleted">IsDeleted <p-sortIcon field="Deleted"></p-sortIcon></th>
                   <th >Action </th>
               </tr>
