--- a/src/app/clientside/clientpages/landing_page/product/product.component.html
+++ b/src/app/clientside/clientpages/landing_page/product/product.component.html
@@ -39,19 +39,19 @@
           <div class="container">
               <!-- *** ADVANTAGES END ***-->
               <div class="box text-center">
-                  <h3 class="text-uppercase">New summer arrivals</h3>
-                  <h4 class="text-muted"><span class="accent">Free shipping</span> on all</h4>
+                  <h3 class="text-uppercase">New Year arrivals</h3>
+                  <!-- <h4 class="text-muted"><span class="accent">Free shipping</span> on all</h4> -->
               </div>
               <div class="row products">
                   <div class="col-md-3 col-sm-4" *ngFor='let prod of Item_Masters'>
                       <div class="product">
                           <div class="image">
-                              <a href="detail.html"><img src="/assets/img/img/No-Image.jpg" alt="" class="img-fluid image1"></a>
+                              <a ><img src="/assets/img/img/No-Image.jpg" alt="" class="img-fluid image1"></a>
                               <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">Quick view</a></div>
                           </div>
                           <!-- /.image-->
                           <div class="text">
-                              <h3><a href="detail.html">{{prod.Item_Name}}</a></h3>
+                              <h3><a>{{prod.Item_Name}}</a></h3>
                               <p class="card-text text-left  mb-0">Price: <span class="font-weight-bold float-right text-success">{{prod.Price}}</span></p>
 
                               <p class="card-text text-left">Stock left: <span class="font-weight-bold float-right text-danger">{{prod.Qty}}</span></p>
@@ -119,11 +119,11 @@
                                           </div>
                                       </div>
                                       <div class="col-sm-6">
-                                          <h2>White Blouse Armani</h2>
-                                          <p class="text-muted text-small text-center">White lace top, woven, has a round neck, short sleeves, has knitted lining attached</p>
+                                          <h2>Item Name</h2>
+                                          <p class="text-muted text-small text-center">Item Description</p>
                                           <div class="box">
                                               <form>
-                                                  <div class="sizes">
+                                                  <!-- <div class="sizes">
                                                       <h3>Available sizes</h3>
                                                       <label for="size_s">
                                                           <a href="#">S</a>
@@ -137,7 +137,7 @@
                                                           <a href="#">L</a>
                                                           <input id="size_l" type="radio" name="size" value="l" class="size-input">
                                                       </label>
-                                                  </div>
+                                                  </div> -->
                                                   <p class="price">$124.00</p>
                                                   <p class="text-center">
                                                       <button type="submit" class="btn btn-outline-primary"><i class="fa fa-shopping-cart"></i> Add to cart</button>
