--- a/src/app/clientside/clientpages/login_client/login_client.component.html
+++ b/src/app/clientside/clientpages/login_client/login_client.component.html
@@ -28,8 +28,8 @@
              </span>
              <div class="wrapper mb-3">
               <span class="group-btn">
-                <button [disabled]="loading" class="btn btn-primary">
-                  <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                <button  class="btn btn-primary">
+                  <span class="spinner-border spinner-border-sm mr-1"></span>
                   Login <i class="fa fa-sign-in"></i>
               </button>
               </span>
