--- a/src/app/clientside/clientpages/subcategory/subcategory.component.html
+++ b/src/app/clientside/clientpages/subcategory/subcategory.component.html
@@ -192,7 +192,7 @@
                 </div> -->
                   <div class="row products">
 
-                    <div class="col-md-4 col-sm-6" *ngFor='let item4  of Item_Masters | async; let isFirst = firstl'>
+                    <div class="col-md-4 col-sm-6" *ngFor='let item4  of Item_Masters; let isFirst = firstl'>
                       <div class="product">
                           <div class="image">
                               <a><img src="/assets/img/img/No-Image.jpg" alt="" class="img-fluid image1"></a>
