--- a/src/app/AdminPanel/pages/country-master/country-list/country-list.component.html
+++ b/src/app/AdminPanel/pages/country-master/country-list/country-list.component.html
@@ -83,7 +83,7 @@
         </div>
         <div class="modal-body">
 
-          <div><div class='alert alert-danger'><span>All * fields are mandatory</span></div></div>
+          <div><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div>
           <form >
             <div>
                 <div class="form-group row">
