--- a/src/app/AdminPanel/pages/department-master/department-list/department-list.component.html
+++ b/src/app/AdminPanel/pages/department-master/department-list/department-list.component.html
@@ -1,6 +1,6 @@
 <!-- *********************************************** Insert-Update **********************************************  -->
 <div *ngIf="IsAddEdit">
-  <div><div class='alert alert-danger'><span>All * fields are mandatory</span></div></div>
+  <div><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div>
   <form >
     <div>
       <div class="form-group row">
