--- a/src/app/AdminPanel/pages/pincode-master/pincode-list/pincode-list.component.html
+++ b/src/app/AdminPanel/pages/pincode-master/pincode-list/pincode-list.component.html
@@ -1,6 +1,6 @@
 <!-- *********************************************** Insert-Update **********************************************  -->
 <div *ngIf="IsAddEdit">
-  <div><div class='alert alert-danger'><span>All * fields are mandatory</span></div></div>
+  <div><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div>
   <form >
     <div>
       <div class="form-group row">
@@ -43,7 +43,7 @@
 </div>
 
 <!-- *********************************************** Data List **********************************************  -->
-<div *ngIf="IsRowEdit"><div class='alert alert-danger'><span>All * fields are mandatory</span></div></div>
+<div *ngIf="IsRowEdit"><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div>
 <div class="row">
   <div class="col-sm-12">
       <app-card [title]="'Allowed Pincode List'" [classHeader]="true" [blockClass]="'table-border-style'">
