--- a/src/app/AdminPanel/pages/root-header-master/root-header-list/root-header-list.component.html
+++ b/src/app/AdminPanel/pages/root-header-master/root-header-list/root-header-list.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="IsAddEdit">
-  <div><div class='alert alert-danger'><span>All * fields are mandatory</span></div></div>
+  <div><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div>
   <form>
     <div>
 
@@ -45,7 +45,7 @@
 </div>
 
 <!-- ________________________List Data__________________________________ -->
-<div *ngIf="IsRowEdit"><div class='alert alert-danger'><span>All * fields are mandatory</span></div></div>
+<div *ngIf="IsRowEdit"><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div>
 <div class="row">
   <div class="col-sm-12">
       <app-card [title]="'Root Header Master'" [classHeader]="true" [blockClass]="'table-border-style'">
